# goit-pythonweb-hw-01

./: .gitignore  LICENSE  README.md  pyproject.toml  task-1.py  task_2.py
