[tool.poetry]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = "Fullstack Web Development with Python - Homework 1"
authors = ["Mykola Podopryhora <m.podopryhora@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"